did some minor changes

--- a/project.html
+++ b/project.html
@@ -33,19 +33,7 @@
   <link rel="icon" type="image/x-icon" href="img/favicon/fav.png">
 
   <!-- Font-Awsome CDN -->
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-
-  <!-- Email Initialisation -->
-  <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
-  <script type="text/javascript">
-    (function () {
-      emailjs.init("iXse8ri5XGCWw48pJ"); // Replace with your User ID from EmailJS
-    })();
-  </script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
 </head>
 
@@ -131,115 +119,129 @@
         <!-- 1 -->
         <div class="project__filter-box wordpress itemBox">
           <div class="overlay">
-            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i
+                class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 2 -->
         <div class="project__filter-box wordpress itemBox">
           <div class="overlay">
-            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i
+                class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 3 -->
         <div class="project__filter-box web itemBox">
           <div class="overlay">
-            <a href="https://abdurrobr34l.github.io/Edutech/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="https://abdurrobr34l.github.io/Edutech/" target="_blank"
+              aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 4 -->
         <div class="project__filter-box web itemBox">
           <div class="overlay">
-            <a href="https://abdurrobr34l.github.io/Bookmark/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="https://abdurrobr34l.github.io/Bookmark/" target="_blank"
+              aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 5 -->
         <div class="project__filter-box web itemBox">
           <div class="overlay">
-            <a href="https://abdurrobr34l.github.io/Entrepoti/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="https://abdurrobr34l.github.io/Entrepoti/" target="_blank"
+              aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 6 -->
         <div class="project__filter-box wordpress itemBox">
           <div class="overlay">
-            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i
+                class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 7 -->
         <div class="project__filter-box web itemBox">
           <div class="overlay">
-            <a href="https://abdurrobr34l.github.io/project_nipro-psd/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="https://abdurrobr34l.github.io/project_nipro-psd/" target="_blank"
+              aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 8 -->
         <div class="project__filter-box web itemBox">
           <div class="overlay">
-            <a href="https://abdurrobr34l.github.io/Taxi-Cab/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="https://abdurrobr34l.github.io/Taxi-Cab/" target="_blank"
+              aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 9 -->
         <div class="project__filter-box web itemBox">
           <div class="overlay">
-            <a href="https://abdurrobr34l.github.io/project_e-school/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="https://abdurrobr34l.github.io/project_e-school/" target="_blank"
+              aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 10 -->
         <div class="project__filter-box email itemBox">
           <div class="overlay">
-            <a href="https://abdurrobr34l.github.io/Email-Template/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="https://abdurrobr34l.github.io/Email-Template/" target="_blank"
+              aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 11 -->
         <div class="project__filter-box web itemBox">
           <div class="overlay">
-            <a href="https://abdurrobr34l.github.io/Project-psd_to_html/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="https://abdurrobr34l.github.io/Project-psd_to_html/" target="_blank"
+              aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 12 -->
         <div class="project__filter-box wordpress itemBox">
           <div class="overlay">
-            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i
+                class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 13 -->
         <div class="project__filter-box email itemBox">
           <div class="overlay">
-            <a href="https://abdurrobr34l.github.io/Email-Template-2/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i
+                class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 14 -->
         <div class="project__filter-box wordpress itemBox">
           <div class="overlay">
-            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i
+                class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
-        
+
       </div>
     </div>
   </div>
   <!-- Project End -->
 
-    <!-- FOOTER START -->
-    <footer class="footer section-padding">
-      <div class="footer__container container flex">
-        <!-- Copywrite Text -->
-        <div class="footer__copywrite">
-          <p>© <span id="year"></span>. All rights reserved.</p>
-        </div>
-        <!-- Social Start -->
-        <div class="footer__social flex">
-          <a href="https://github.com/Abdurrobr34l" target="_blank" aria-label="it is github logo"><i
-              class="fa-brands fa-github"></i></a>
-          <span>/</span>
-          <a href="https://www.linkedin.com/in/abdurrobr34l/" target="_blank" aria-label="it is linkedin logo"><i
-              class="fa-brands fa-linkedin"></i></a>
-          <span>/</span>
-          <a href="https://www.facebook.com/abdurrobr34l" target="_blank" aria-label="it is facebook logo"><i
-              class="fa-brands fa-facebook"></i></a>
-        </div>
+  <!-- FOOTER START -->
+  <footer class="footer section-padding">
+    <div class="footer__container container flex">
+      <!-- Copywrite Text -->
+      <div class="footer__copywrite">
+        <p>© <span id="year"></span>. All rights reserved.</p>
       </div>
-    </footer>
-    <!-- FOOTER END -->
-  
+      <!-- Social Start -->
+      <div class="footer__social flex">
+        <a href="https://github.com/Abdurrobr34l" target="_blank" aria-label="it is github logo"><i
+            class="fa-brands fa-github"></i></a>
+        <span>/</span>
+        <a href="https://www.linkedin.com/in/abdurrobr34l/" target="_blank" aria-label="it is linkedin logo"><i
+            class="fa-brands fa-linkedin"></i></a>
+        <span>/</span>
+        <a href="https://www.facebook.com/abdurrobr34l" target="_blank" aria-label="it is facebook logo"><i
+            class="fa-brands fa-facebook"></i></a>
+      </div>
+    </div>
+  </footer>
+  <!-- FOOTER END -->
+
   <script src="js/jquery-3.7.1.min.js"></script>
   <script src="js/script.js"></script>
   <script src="js/year.js"></script>
