--- a/index.html
+++ b/index.html
@@ -33,12 +33,7 @@
   <link rel="icon" type="image/x-icon" href="img/favicon/fav.png">
 
   <!-- Font-Awsome CDN -->
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
-
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
   <!-- Email Initialisation -->
   <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
@@ -65,7 +60,8 @@
       <div class="header__wrapper flex-wrapper">
         <!-- Logo -->
         <div class="header__logo">
-          <a href="index.html" aria-label="it is logo image"><img src="img/logo/11.png" alt="it is abdurrobr34l website logo"></a>
+          <a href="index.html" aria-label="it is logo image"><img src="img/logo/11.png"
+              alt="it is abdurrobr34l website logo"></a>
           <!-- <a href="index.html"><img src="img/logo/22.png" alt="it is abdurrobr34l website logo"></a> -->
         </div>
         <!-- Menus -->
@@ -98,9 +94,9 @@
       <nav class="hamburgermenu__nav flex">
         <ul>
           <li><a href="#about" aria-label="it is link for about section">About</a></li>
-            <li><a href="#projects" aria-label="it is link for project section">Projects</a></li>
-            <li><a href="#services" aria-label="it is link for service section">Services</a></li>
-            <li><a href="#contact" aria-label="it is link for contact section">Contact</a></li>
+          <li><a href="#projects" aria-label="it is link for project section">Projects</a></li>
+          <li><a href="#services" aria-label="it is link for service section">Services</a></li>
+          <li><a href="#contact" aria-label="it is link for contact section">Contact</a></li>
         </ul>
       </nav>
       <!-- Header Button -->
@@ -198,7 +194,8 @@
               <br><br>
               I look forward to contributing to exciting projects and continuing my growth in this fast-paced field..
             </p>
-            <a href="#contact" class="about__right-text-btn btn" aria-label="it is link for contact section">Get in touch</a>
+            <a href="#contact" class="about__right-text-btn btn" aria-label="it is link for contact section">Get in
+              touch</a>
           </div>
           <!-- Skill Icon Start -->
           <div class="about__right-skill flex">
@@ -251,37 +248,43 @@
         <!-- 1 -->
         <div class="project__filter-box wordpress itemBox">
           <div class="overlay">
-            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i
+                class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 2 -->
         <div class="project__filter-box wordpress itemBox">
           <div class="overlay">
-            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i
+                class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 3 -->
         <div class="project__filter-box web itemBox">
           <div class="overlay">
-            <a href="https://abdurrobr34l.github.io/Edutech/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="https://abdurrobr34l.github.io/Edutech/" target="_blank"
+              aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 4 -->
         <div class="project__filter-box web itemBox">
           <div class="overlay">
-            <a href="https://abdurrobr34l.github.io/Bookmark/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="https://abdurrobr34l.github.io/Bookmark/" target="_blank"
+              aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 5 -->
         <div class="project__filter-box web itemBox">
           <div class="overlay">
-            <a href="https://abdurrobr34l.github.io/Entrepoti/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="https://abdurrobr34l.github.io/Entrepoti/" target="_blank"
+              aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 6 -->
         <div class="project__filter-box email itemBox">
           <div class="overlay">
-            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i
+                class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
 
