did work on responsive when screen is zoom in and out

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   <!-- Header End -->
 
   <!-- Hero Start -->
-  <div class="hero section-padding">
+  <section class="hero section-padding">
     <div class="hero__container container">
       <div class="hero__wrapper grid">
 
@@ -146,11 +146,11 @@
 
       </div>
     </div>
-  </div>
+  </section>
   <!-- Hero End -->
 
   <!-- ABOUT ME START -->
-  <div class="about section-padding" id="about">
+  <section class="about section-padding" id="about">
     <div class="about__container container">
       <div class="about__wrapper flex">
         <!-- Left Side Start -->
@@ -225,11 +225,11 @@
 
       </div>
     </div>
-  </div>
+  </section>
   <!-- ABOUT ME END -->
 
   <!-- PROJECT START -->
-  <div class="project section-padding" id="projects">
+  <section class="project section-padding" id="projects">
     <div class="project__container container">
       <!-- Filter Buttons -->
       <div class="project__filter flex">
@@ -292,11 +292,11 @@
       <!-- Project Button -->
       <a href="project.html" class="project__btn btn">view my projects</a>
     </div>
-  </div>
+  </section>
   <!-- PROJECT END -->
 
   <!-- SERVICE START -->
-  <div class="service section-padding" id="services">
+  <section class="service section-padding" id="services">
     <div class="service__container container">
       <div class="service__wrapper flex">
 
@@ -347,11 +347,11 @@
       </div>
 
     </div>
-  </div>
+  </section>
   <!-- SERVICE END -->
 
   <!-- CONTACT ME START -->
-  <div class="contact" id="contact">
+  <section class="contact" id="contact">
     <div class="contact__container container flex">
       <!-- Info -->
       <div class="contact__info flex">
@@ -415,7 +415,7 @@
         <p id="status"></p>
       </div>
     </div>
-  </div>
+  </section>
   <!-- CONTACT ME END -->
 
   <!-- FOOTER START -->
