updated my project

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="header__wrapper flex-wrapper">
         <!-- Logo -->
         <div class="header__logo">
-          <a href="index.html" aria-label="it is logo image"><img src="img/logo/11.png"
+          <a href="index.html" aria-label="it is logo image"><img src="img/logo/logo.png"
               alt="it is abdurrobr34l website logo"></a>
           <!-- <a href="index.html"><img src="img/logo/22.png" alt="it is abdurrobr34l website logo"></a> -->
         </div>
@@ -198,32 +198,65 @@
               touch</a>
           </div>
           <!-- Skill Icon Start -->
-          <div class="about__right-skill flex">
-            <div class="icon icon1">
-              <i class="fa-brands fa-html5 fa-2xl"></i>
+          <div class="about__right-skill flex text-center">
+            <!-- HTML -->
+            <div class="icon html">
+              <img src="img/about/html.svg" alt="HTML - abdurrob personal portfolio">
+              <h5>HTML</h3>
             </div>
-            <div class="icon icon2">
-              <i class="fa-brands fa-css3-alt fa-2xl"></i>
+            <!-- CSS -->
+            <div class="icon css">
+              <img src="img/about/css.svg" alt="CSS - abdurrob personal portfolio">
+              <h5>CSS</h3>
             </div>
-            <div class="icon icon3">
-              <i class="fa-brands fa-sass fa-2xl"></i>
-            </div>
-            <div class="icon icon4">
-              <i class="fa-brands fa-square-js fa-2xl"></i>
-            </div>
-            <div class="icon icon5">
-              <svg id="tailwind" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 33" width="62px" fill="#38bdf8"><g clip-path="url(#prefix__clip0)"><path fill-rule="evenodd" d="M27 0c-7.2 0-11.7 3.6-13.5 10.8 2.7-3.6 5.85-4.95 9.45-4.05 2.054.513 3.522 2.004 5.147 3.653C30.744 13.09 33.808 16.2 40.5 16.2c7.2 0 11.7-3.6 13.5-10.8-2.7 3.6-5.85 4.95-9.45 4.05-2.054-.513-3.522-2.004-5.147-3.653C36.756 3.11 33.692 0 27 0zM13.5 16.2C6.3 16.2 1.8 19.8 0 27c2.7-3.6 5.85-4.95 9.45-4.05 2.054.514 3.522 2.004 5.147 3.653C17.244 29.29 20.308 32.4 27 32.4c7.2 0 11.7-3.6 13.5-10.8-2.7 3.6-5.85 4.95-9.45 4.05-2.054-.513-3.522-2.004-5.147-3.653C23.256 19.31 20.192 16.2 13.5 16.2z" clip-rule="evenodd"/></g><defs><clipPath id="prefix__clip0"><path fill="#fff" d="M0 0h54v32.4H0z"/></clipPath></defs></svg>
-            </div>
-            <div class="icon icon6">
-              <i class="fa-brands fa-bootstrap fa-2xl"></i>
-            </div>
-            <div class="icon icon7">
-              <i class="fa-brands fa-wordpress fa-2xl"></i>
-            </div>
-            <div class="icon icon8">
-              <i class="fa-solid fa-envelope fa-2xl"></i>
+            <!-- JAVASCRIPT -->
+            <div class="icon javascript">
+              <img src="img/about/javascript.svg" alt="JAVASCRIPT - abdurrob personal portfolio">
+              <h5>JAVASCRIPT</h3>
             </div>
           </div>
+
+          <!-- Skill Icon Start 2 -->
+          <div class="about__right-skills flex text-center">
+            <!-- SASS -->
+            <div class="icon sass">
+              <img src="img/about/sass.svg" alt="SASS - abdurrob personal portfolio">
+              <h5>SASS</h3>
+            </div>
+            <!-- TAILWIND -->
+            <div class="icon tailwindcss">
+              <img src="img/about/tailwindcss.svg" alt="TAILWIND - abdurrob personal portfolio">
+              <h5>TAILWIND</h3>
+            </div>
+            <!-- BOOTSTRAP -->
+            <div class="icon bootstrap">
+              <img src="img/about/bootstrap.svg" alt="BOOTSTRAP - abdurrob personal portfolio">
+              <h5>BOOTSTRAP</h3>
+            </div>
+            <!-- GIT -->
+            <div class="icon git">
+              <img src="img/about/git.svg" alt="GIT - abdurrob personal portfolio">
+              <h5>GIT</h3>
+            </div>
+            <!-- VITE -->
+            <div class="icon vite">
+              <img src="img/about/vite.svg" alt="VITE - abdurrob personal portfolio">
+              <h5>VITE</h3>
+            </div>
+            <!-- WORDPRESS -->
+            <div class="icon wordpress">
+              <img src="img/about/wordpress.svg" alt="WORDPRESS - abdurrob personal portfolio">
+              <h5>WORDPRESS</h3>
+            </div>
+            <!-- EMAIL TEMPLATE -->
+            <div class="icon email">
+              <img src="img/about/email.svg" alt="EMAIL TEMPLATE - abdurrob personal portfolio">
+              <h5>EMAIL TEMPLATE</h3>
+            </div>
+            
+          </div>
+
+          
         </div>
 
       </div>
@@ -449,3 +482,30 @@
 </body>
 
 </html>
+
+
+
+<!-- <div class="icon icon1">
+  <i class="fa-brands fa-html5 fa-2xl"></i>
+</div>
+ <div class="icon icon2">
+  <i class="fa-brands fa-css3-alt fa-2xl"></i>
+</div>
+<div class="icon icon3">
+  <i class="fa-brands fa-sass fa-2xl"></i>
+</div>
+<div class="icon icon4">
+  <i class="fa-brands fa-square-js fa-2xl"></i>
+</div>
+<div class="icon icon5">
+  <svg id="tailwind" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 33" width="62px" fill="#38bdf8"><g clip-path="url(#prefix__clip0)"><path fill-rule="evenodd" d="M27 0c-7.2 0-11.7 3.6-13.5 10.8 2.7-3.6 5.85-4.95 9.45-4.05 2.054.513 3.522 2.004 5.147 3.653C30.744 13.09 33.808 16.2 40.5 16.2c7.2 0 11.7-3.6 13.5-10.8-2.7 3.6-5.85 4.95-9.45 4.05-2.054-.513-3.522-2.004-5.147-3.653C36.756 3.11 33.692 0 27 0zM13.5 16.2C6.3 16.2 1.8 19.8 0 27c2.7-3.6 5.85-4.95 9.45-4.05 2.054.514 3.522 2.004 5.147 3.653C17.244 29.29 20.308 32.4 27 32.4c7.2 0 11.7-3.6 13.5-10.8-2.7 3.6-5.85 4.95-9.45 4.05-2.054-.513-3.522-2.004-5.147-3.653C23.256 19.31 20.192 16.2 13.5 16.2z" clip-rule="evenodd"/></g><defs><clipPath id="prefix__clip0"><path fill="#fff" d="M0 0h54v32.4H0z"/></clipPath></defs></svg>
+</div>
+<div class="icon icon6">
+  <i class="fa-brands fa-bootstrap fa-2xl"></i>
+</div>
+<div class="icon icon7">
+  <i class="fa-brands fa-wordpress fa-2xl"></i>
+</div>
+<div class="icon icon8">
+  <i class="fa-solid fa-envelope fa-2xl"></i>
+</div> -->
