Updatl about  section skill icons part infinit scrolling

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
   <!-- Open Graph Tags -->
   <meta property="og:title" content="Abdur Rob | Frontend Developer & WordPress Developer">
   <meta property="og:description" content="Explore my web development projects and skills as a frontend developer.">
-  <meta property="og:image" content="url_to_image.jpg">
-  <meta property="og:url" content="https://yourwebsite.com">
+  <meta property="og:image" content="img/hero/abdurrob.png">
+  <meta property="og:url" content="https://abdurrobr34l.github.io/">
   <meta property="og:type" content="website">
 
   <!-- Twitter Card Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Abdur Rob | Frontend Developer & WordPress Developer">
   <meta name="twitter:description" content="Explore my web development projects and skills as a frontend developer.">
-  <meta name="twitter:image" content="url_to_image.jpg">
+  <meta name="twitter:image" content="img/hero/abdurrob.png">
 
   <!-- File Links -->
   <link rel="stylesheet" href="css/main.css">
@@ -77,7 +77,7 @@
         <div class="header__btn">
           <a href="#contact" class="btn" aria-label="it is link for contact section">Hire Me</a>
         </div>
-        <!-- Hamburger Menu Icon -->
+        <!-- Hamburger Menu icon -->
         <div class="header__hamburgermenu-icon">
           <!-- <i class="fa-solid fa-bars"></i> -->
           <i class="fa-solid fa-bars-staggered"></i>
@@ -159,7 +159,7 @@
           <div class="about__left-image">
             <img src="img/hero/abdurrob.png" alt="it is the image of the author of this website, named abdurrobr34l">
           </div>
-          <!-- Social Media Icon Start -->
+          <!-- Social Media icon Start -->
           <div class="about__left-social flex">
             <a href="https://github.com/Abdurrobr34l" target="_blank" aria-label="it is github logo"><i
                 class="fa-brands fa-github"></i></a>
@@ -197,68 +197,68 @@
             <a href="#contact" class="about__right-text-btn btn" aria-label="it is link for contact section">Get in
               touch</a>
           </div>
-          <!-- Skill Icon Start -->
-          <div class="about__right-skill flex text-center">
-            <!-- HTML -->
-            <div class="icon html">
-              <img src="img/about/html.svg" alt="HTML - abdurrob personal portfolio">
-              <h5>HTML</h3>
+          <!-- Skill icon Start -->
+          <div class="about__right-skill">
+            <!-- RIGHT ANIMATION WRAPPER -->
+            <div class="about__right-skill-wrapper text-center">
+              <!-- HTML -->
+              <div class="itemRight item1">
+                <img src="img/about/html.svg" alt="HTML - abdurrob personal portfolio">
+                <h5>HTML</h5>
+              </div>
+              <!-- CSS -->
+              <div class="itemRight item2">
+                <img src="img/about/css.svg" alt="CSS - abdurrob personal portfolio">
+                <h5>CSS</h5>
+              </div>
+              <!-- JAVASCRIPT -->
+              <div class="itemRight item3">
+                <img src="img/about/javascript.svg" alt="JAVASCRIPT - abdurrob personal portfolio">
+                <h5>JAVASCRIPT</h5>
+              </div>
+              <!-- WORDPRESS -->
+              <div class="itemRight item4">
+                <img src="img/about/wordpress.svg" alt="WORDPRESS - abdurrob personal portfolio">
+                <h5>WORDPRESS</h5>
+              </div>
+              <!-- EMAIL TEMPLATE -->
+              <div class="itemRight item5">
+                <img src="img/about/email.svg" alt="EMAIL TEMPLATE - abdurrob personal portfolio">
+                <h5>EMAIL TEMPLATE</h5>
+              </div>
             </div>
-            <!-- CSS -->
-            <div class="icon css">
-              <img src="img/about/css.svg" alt="CSS - abdurrob personal portfolio">
-              <h5>CSS</h3>
-            </div>
-            <!-- JAVASCRIPT -->
-            <div class="icon javascript">
-              <img src="img/about/javascript.svg" alt="JAVASCRIPT - abdurrob personal portfolio">
-              <h5>JAVASCRIPT</h3>
+            <!-- LEFT ANIMATION WRAPPER -->
+            <div class="about__right-skill-wrapper text-center">
+              <!-- SASS -->
+              <div class="itemLeft item1">
+                <img src="img/about/sass.svg" alt="SASS - abdurrob personal portfolio">
+                <h5>SASS</h5>
+              </div>
+              <!-- TAILWIND -->
+              <div class="itemLeft item2">
+                <img src="img/about/tailwindcss.svg" alt="TAILWIND - abdurrob personal portfolio">
+                <h5>TAILWIND</h5>
+              </div>
+              <!-- BOOTSTRAP -->
+              <div class="itemLeft item3">
+                <img src="img/about/bootstrap.svg" alt="BOOTSTRAP - abdurrob personal portfolio">
+                <h5>BOOTSTRAP</h5>
+              </div>
+              <!-- GIT -->
+              <div class="itemLeft item4">
+                <img src="img/about/git.svg" alt="GIT - abdurrob personal portfolio">
+                <h5>GIT</h5>
+              </div>
+              <!-- VITE -->
+              <div class="itemLeft item5">
+                <img src="img/about/vite.svg" alt="VITE - abdurrob personal portfolio">
+                <h5>VITE</h5>
+              </div>
             </div>
           </div>
+          <!-- Skill icon End -->
 
-          <!-- Skill Icon Start 2 -->
-          <div class="about__right-skills flex text-center">
-            <!-- SASS -->
-            <div class="icon sass">
-              <img src="img/about/sass.svg" alt="SASS - abdurrob personal portfolio">
-              <h5>SASS</h3>
-            </div>
-            <!-- TAILWIND -->
-            <div class="icon tailwindcss">
-              <img src="img/about/tailwindcss.svg" alt="TAILWIND - abdurrob personal portfolio">
-              <h5>TAILWIND</h3>
-            </div>
-            <!-- BOOTSTRAP -->
-            <div class="icon bootstrap">
-              <img src="img/about/bootstrap.svg" alt="BOOTSTRAP - abdurrob personal portfolio">
-              <h5>BOOTSTRAP</h3>
-            </div>
-            <!-- GIT -->
-            <div class="icon git">
-              <img src="img/about/git.svg" alt="GIT - abdurrob personal portfolio">
-              <h5>GIT</h3>
-            </div>
-            <!-- VITE -->
-            <div class="icon vite">
-              <img src="img/about/vite.svg" alt="VITE - abdurrob personal portfolio">
-              <h5>VITE</h3>
-            </div>
-            <!-- WORDPRESS -->
-            <div class="icon wordpress">
-              <img src="img/about/wordpress.svg" alt="WORDPRESS - abdurrob personal portfolio">
-              <h5>WORDPRESS</h3>
-            </div>
-            <!-- EMAIL TEMPLATE -->
-            <div class="icon email">
-              <img src="img/about/email.svg" alt="EMAIL TEMPLATE - abdurrob personal portfolio">
-              <h5>EMAIL TEMPLATE</h3>
-            </div>
-            
-          </div>
-
-          
         </div>
-
       </div>
     </div>
   </section>
@@ -399,7 +399,7 @@
 
         <!-- Email -->
         <div class="contact__info-box flex">
-          <!-- Icon -->
+          <!-- icon -->
           <div class="icon">
             <i class="fa-regular fa-paper-plane"></i>
           </div>
@@ -412,7 +412,7 @@
 
         <!-- Address -->
         <div class="contact__info-box flex">
-          <!-- Icon -->
+          <!-- icon -->
           <div class="icon">
             <i class="fa-solid fa-location-dot"></i>
           </div>
@@ -482,30 +482,3 @@
 </body>
 
 </html>
-
-
-
-<!-- <div class="icon icon1">
-  <i class="fa-brands fa-html5 fa-2xl"></i>
-</div>
- <div class="icon icon2">
-  <i class="fa-brands fa-css3-alt fa-2xl"></i>
-</div>
-<div class="icon icon3">
-  <i class="fa-brands fa-sass fa-2xl"></i>
-</div>
-<div class="icon icon4">
-  <i class="fa-brands fa-square-js fa-2xl"></i>
-</div>
-<div class="icon icon5">
-  <svg id="tailwind" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 33" width="62px" fill="#38bdf8"><g clip-path="url(#prefix__clip0)"><path fill-rule="evenodd" d="M27 0c-7.2 0-11.7 3.6-13.5 10.8 2.7-3.6 5.85-4.95 9.45-4.05 2.054.513 3.522 2.004 5.147 3.653C30.744 13.09 33.808 16.2 40.5 16.2c7.2 0 11.7-3.6 13.5-10.8-2.7 3.6-5.85 4.95-9.45 4.05-2.054-.513-3.522-2.004-5.147-3.653C36.756 3.11 33.692 0 27 0zM13.5 16.2C6.3 16.2 1.8 19.8 0 27c2.7-3.6 5.85-4.95 9.45-4.05 2.054.514 3.522 2.004 5.147 3.653C17.244 29.29 20.308 32.4 27 32.4c7.2 0 11.7-3.6 13.5-10.8-2.7 3.6-5.85 4.95-9.45 4.05-2.054-.513-3.522-2.004-5.147-3.653C23.256 19.31 20.192 16.2 13.5 16.2z" clip-rule="evenodd"/></g><defs><clipPath id="prefix__clip0"><path fill="#fff" d="M0 0h54v32.4H0z"/></clipPath></defs></svg>
-</div>
-<div class="icon icon6">
-  <i class="fa-brands fa-bootstrap fa-2xl"></i>
-</div>
-<div class="icon icon7">
-  <i class="fa-brands fa-wordpress fa-2xl"></i>
-</div>
-<div class="icon icon8">
-  <i class="fa-solid fa-envelope fa-2xl"></i>
-</div> -->
