Updated my portfolio skills scroller in about section and added new buttons and one extra box in project section

--- a/index.html
+++ b/index.html
@@ -273,7 +273,10 @@
         <div class="project__filter-buttons flex">
           <ul class="flex">
             <li class="list project__filter-btn active" data-filter="all">ALL</li>
-            <li class="list project__filter-btn" data-filter="web">Web Development</li>
+            <li class="list project__filter-btn" data-filter="raw">Raw CSS / SCSS</li>
+            <li class="list project__filter-btn" data-filter="tailwind">Tailwind</li>
+            <li class="list project__filter-btn" data-filter="bootstrap">Bootstrap</li>
+
             <li class="list project__filter-btn" data-filter="wordpress">Wordpress</li>
             <li class="list project__filter-btn" data-filter="email">Email Template</li>
           </ul>
@@ -296,21 +299,21 @@
           </div>
         </div>
         <!-- 3 -->
-        <div class="project__filter-box web itemBox">
+        <div class="project__filter-box bootstrap itemBox">
           <div class="overlay">
             <a href="https://abdurrobr34l.github.io/Edutech/" target="_blank"
               aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 4 -->
-        <div class="project__filter-box web itemBox">
+        <div class="project__filter-box raw itemBox">
           <div class="overlay">
             <a href="https://abdurrobr34l.github.io/Bookmark/" target="_blank"
               aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 5 -->
-        <div class="project__filter-box web itemBox">
+        <div class="project__filter-box raw itemBox">
           <div class="overlay">
             <a href="https://abdurrobr34l.github.io/Entrepoti/" target="_blank"
               aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
@@ -321,6 +324,14 @@
           <div class="overlay">
             <a href="#" target="_blank" aria-label="this link are for particular projects links"><i
                 class="fa-solid fa-arrow-right-long"></i></a>
+          </div>
+        </div>
+        <!-- 7 (tailwind for now)-->
+        <div class="project__filter-box tailwind itemBox">
+          <div class="overlay">
+            <a href="https://abdurrobr34l.github.io/tailwind-login/" target="_blank" aria-label="this link are for particular projects links"><i
+                class="fa-solid fa-arrow-right-long"></i></a>
+            <!-- <h3 class="text">Soon it will be updated</h3> -->
           </div>
         </div>
 
