--- a/project.html
+++ b/project.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Abdur Rob</title>
+  <title>Abdur Rob | Projects</title>
   <meta name="author" content="Abdur Rob">
   <meta name="description"
     content="Welcome to Abdur Rob's portfolio. Explore my web development projects, skills, and learn more about my journey as a frontend developer.">
@@ -52,7 +52,7 @@
       <div class="header__wrapper flex-wrapper">
         <!-- Logo -->
         <div class="header__logo">
-          <a href="index.html"><img src="img/logo/11.png" alt="it is abdurrobr34l website logo"></a>
+          <a href="index.html"><img src="img/logo/logo.png" alt="it is abdurrobr34l website logo"></a>
           <!-- <a href="index.html"><img src="img/logo/22.png" alt="it is abdurrobr34l website logo"></a> -->
         </div>
         <!-- Menus -->
@@ -108,7 +108,10 @@
         <div class="project__filter-buttons flex">
           <ul class="flex">
             <li class="list project__filter-btn active" data-filter="all">ALL</li>
-            <li class="list project__filter-btn" data-filter="web">Web Development</li>
+            <li class="list project__filter-btn" data-filter="raw">Raw CSS / SCSS</li>
+            <li class="list project__filter-btn" data-filter="tailwind">Tailwind</li>
+            <li class="list project__filter-btn" data-filter="bootstrap">Bootstrap</li>
+
             <li class="list project__filter-btn" data-filter="wordpress">Wordpress</li>
             <li class="list project__filter-btn" data-filter="email">Email Template</li>
           </ul>
@@ -131,49 +134,50 @@
           </div>
         </div>
         <!-- 3 -->
-        <div class="project__filter-box web itemBox">
+        <div class="project__filter-box bootstrap itemBox">
           <div class="overlay">
             <a href="https://abdurrobr34l.github.io/Edutech/" target="_blank"
               aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 4 -->
-        <div class="project__filter-box web itemBox">
+        <div class="project__filter-box raw itemBox">
           <div class="overlay">
             <a href="https://abdurrobr34l.github.io/Bookmark/" target="_blank"
               aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 5 -->
-        <div class="project__filter-box web itemBox">
+        <div class="project__filter-box raw itemBox">
           <div class="overlay">
             <a href="https://abdurrobr34l.github.io/Entrepoti/" target="_blank"
               aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 6 -->
-        <div class="project__filter-box wordpress itemBox">
+        <div class="project__filter-box email itemBox">
           <div class="overlay">
             <a href="#" target="_blank" aria-label="this link are for particular projects links"><i
                 class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
-        <!-- 7 -->
-        <div class="project__filter-box web itemBox">
+        <!-- 7 (tailwind for now)-->
+        <div class="project__filter-box tailwind itemBox">
           <div class="overlay">
-            <a href="https://abdurrobr34l.github.io/project_nipro-psd/" target="_blank"
+            <a href="https://abdurrobr34l.github.io/tailwind-login/" target="_blank"
               aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
+            <!-- <h3 class="text">Soon it will be updated</h3> -->
           </div>
         </div>
         <!-- 8 -->
-        <div class="project__filter-box web itemBox">
+        <div class="project__filter-box bootstrap itemBox">
           <div class="overlay">
             <a href="https://abdurrobr34l.github.io/Taxi-Cab/" target="_blank"
               aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
         <!-- 9 -->
-        <div class="project__filter-box web itemBox">
+        <div class="project__filter-box bootstrap itemBox">
           <div class="overlay">
             <a href="https://abdurrobr34l.github.io/project_e-school/" target="_blank"
               aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
@@ -187,7 +191,7 @@
           </div>
         </div>
         <!-- 11 -->
-        <div class="project__filter-box web itemBox">
+        <div class="project__filter-box bootstrap itemBox">
           <div class="overlay">
             <a href="https://abdurrobr34l.github.io/Project-psd_to_html/" target="_blank"
               aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
@@ -201,7 +205,7 @@
           </div>
         </div>
         <!-- 13 -->
-        <div class="project__filter-box email itemBox">
+        <div class="project__filter-box wordpress itemBox">
           <div class="overlay">
             <a href="#" target="_blank" aria-label="this link are for particular projects links"><i
                 class="fa-solid fa-arrow-right-long"></i></a>
@@ -209,6 +213,13 @@
         </div>
         <!-- 14 -->
         <div class="project__filter-box wordpress itemBox">
+          <div class="overlay">
+            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i
+                class="fa-solid fa-arrow-right-long"></i></a>
+          </div>
+        </div>
+        <!-- 15 -->
+        <div class="project__filter-box bootstrap itemBox">
           <div class="overlay">
             <a href="#" target="_blank" aria-label="this link are for particular projects links"><i
                 class="fa-solid fa-arrow-right-long"></i></a>
