--- a/project.html
+++ b/project.html
@@ -1,261 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Abdur Rob | Projects</title>
-  <meta name="author" content="Abdur Rob">
-  <meta name="description"
-    content="Welcome to Abdur Rob's portfolio. Explore my web development projects, skills, and learn more about my journey as a frontend developer.">
-  <meta name="keywords"
-    content="Abdur Rob, frontend developer, web development, portfolio, JavaScript, CSS, HTML, projects">
-  <meta name="robots" content="index, follow">
-
-  <!-- Open Graph Tags -->
-  <meta property="og:title" content="Abdur Rob | Frontend Developer & WordPress Developer">
-  <meta property="og:description" content="Explore my web development projects and skills as a frontend developer.">
-  <meta property="og:image" content="url_to_image.jpg">
-  <meta property="og:url" content="https://yourwebsite.com">
-  <meta property="og:type" content="website">
-
-  <!-- Twitter Card Tags -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Abdur Rob | Frontend Developer & WordPress Developer">
-  <meta name="twitter:description" content="Explore my web development projects and skills as a frontend developer.">
-  <meta name="twitter:image" content="url_to_image.jpg">
-
-  <!-- File Links -->
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/media.css">
-
-  <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="img/favicon/fav.png">
-
-  <!-- Font-Awsome CDN -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-
-</head>
-
-<body>
-  <!-- Go-To-Top Button Start -->
-  <!-- <a href="#" class="go-to-top" id="goToTop">↑</a> -->
-  <a href="#" class="go-to-top" id="goToTop" aria-label="this link is for go to top button">
-    <!-- G<br>O<br><br>T<br>O<br><br>T<br>O<br>P -->
-    G<br>O<br><br>T<br>O<br>P
-  </a>
-  <!-- Go-To-Top Button End -->
-
-  <!-- Header Start -->
-  <header class="header">
-    <div class="header__container container">
-      <div class="header__wrapper flex-wrapper">
-        <!-- Logo -->
-        <div class="header__logo">
-          <a href="index.html"><img src="img/logo/logo.png" alt="it is abdurrobr34l website logo"></a>
-          <!-- <a href="index.html"><img src="img/logo/22.png" alt="it is abdurrobr34l website logo"></a> -->
-        </div>
-        <!-- Menus -->
-        <nav class="header__nav">
-          <ul>
-            <li><a href="index.html#about" aria-label="it is link for about section">About</a></li>
-            <li><a href="index.html#projects" aria-label="it is link for project section">Projects</a></li>
-            <li><a href="index.html#services" aria-label="it is link for service section">Services</a></li>
-            <li><a href="index.html#contact" aria-label="it is link for contact section">Contact</a></li>
-          </ul>
-        </nav>
-        <!-- Header Button -->
-        <div class="header__btn">
-          <a href="index.html#contact" class="btn" aria-label="it is link for contact section">Hire Me</a>
-        </div>
-        <!-- Hamburger Menu Icon -->
-        <div class="header__hamburgermenu-icon">
-          <!-- <i class="fa-solid fa-bars"></i> -->
-          <i class="fa-solid fa-bars-staggered"></i>
-          <i class="fa-solid fa-xmark"></i>
-        </div>
-      </div>
-    </div>
-  </header>
-
-  <!-- Hamburger Menu Start -->
-  <div class="hamburgermenu">
-    <div class="hamburgermenu__container container flex">
-      <!-- Menus -->
-      <nav class="hamburgermenu__nav flex">
-        <ul>
-          <li><a href="index.html#about" aria-label="it is link for about section">About</a></li>
-          <li><a href="index.html#projects" aria-label="it is link for project section">Projects</a></li>
-          <li><a href="index.html#services" aria-label="it is link for service section">Services</a></li>
-          <li><a href="index.html#contact" aria-label="it is link for contact section">Contact</a></li>
-        </ul>
-      </nav>
-      <!-- Header Button -->
-      <div class="hamburgermenu__btn header__btn">
-        <a href="#contact" class="btn" aria-label="it is link for contact section">Hire Me</a>
-      </div>
-    </div>
-  </div>
-  <!-- Hamburger Menu End -->
-  <!-- Header End -->
-
-  <!-- Project Start -->
-  <div class="project" id="projects">
-    <div class="project__container container">
-      <!-- Filter Buttons -->
-      <div class="project__filter flex">
-        <!-- Filter Buttons -->
-        <div class="project__filter-buttons flex">
-          <ul class="flex">
-            <li class="list project__filter-btn active" data-filter="all">ALL</li>
-            <li class="list project__filter-btn" data-filter="raw">Raw CSS / SCSS</li>
-            <li class="list project__filter-btn" data-filter="tailwind">Tailwind</li>
-            <li class="list project__filter-btn" data-filter="bootstrap">Bootstrap</li>
-
-            <li class="list project__filter-btn" data-filter="wordpress">Wordpress</li>
-            <li class="list project__filter-btn" data-filter="email">Email Template</li>
-          </ul>
-        </div>
-      </div>
-      <!-- Filter Boxes -->
-      <div class="project__filter-boxes">
-        <!-- 1 -->
-        <div class="project__filter-box wordpress itemBox">
-          <div class="overlay">
-            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i
-                class="fa-solid fa-arrow-right-long"></i></a>
-          </div>
-        </div>
-        <!-- 2 -->
-        <div class="project__filter-box wordpress itemBox">
-          <div class="overlay">
-            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i
-                class="fa-solid fa-arrow-right-long"></i></a>
-          </div>
-        </div>
-        <!-- 3 -->
-        <div class="project__filter-box bootstrap itemBox">
-          <div class="overlay">
-            <a href="https://abdurrobr34l.github.io/Edutech/" target="_blank"
-              aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
-          </div>
-        </div>
-        <!-- 4 -->
-        <div class="project__filter-box raw itemBox">
-          <div class="overlay">
-            <a href="https://abdurrobr34l.github.io/Bookmark/" target="_blank"
-              aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
-          </div>
-        </div>
-        <!-- 5 -->
-        <div class="project__filter-box raw itemBox">
-          <div class="overlay">
-            <a href="https://abdurrobr34l.github.io/Entrepoti/" target="_blank"
-              aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
-          </div>
-        </div>
-        <!-- 6 -->
-        <div class="project__filter-box email itemBox">
-          <div class="overlay">
-            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i
-                class="fa-solid fa-arrow-right-long"></i></a>
-          </div>
-        </div>
-        <!-- 7 (tailwind for now)-->
-        <div class="project__filter-box tailwind itemBox">
-          <div class="overlay">
-            <a href="https://abdurrobr34l.github.io/tailwind-login/" target="_blank"
-              aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
-            <!-- <h3 class="text">Soon it will be updated</h3> -->
-          </div>
-        </div>
-        <!-- 8 -->
-        <div class="project__filter-box bootstrap itemBox">
-          <div class="overlay">
-            <a href="https://abdurrobr34l.github.io/Taxi-Cab/" target="_blank"
-              aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
-          </div>
-        </div>
-        <!-- 9 -->
-        <div class="project__filter-box bootstrap itemBox">
-          <div class="overlay">
-            <a href="https://abdurrobr34l.github.io/project_e-school/" target="_blank"
-              aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
-          </div>
-        </div>
-        <!-- 10 -->
-        <div class="project__filter-box email itemBox">
-          <div class="overlay">
-            <a href="https://abdurrobr34l.github.io/Email-Template/" target="_blank"
-              aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
-          </div>
-        </div>
-        <!-- 11 -->
-        <div class="project__filter-box bootstrap itemBox">
-          <div class="overlay">
-            <a href="https://abdurrobr34l.github.io/Project-psd_to_html/" target="_blank"
-              aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a>
-          </div>
-        </div>
-        <!-- 12 -->
-        <div class="project__filter-box wordpress itemBox">
-          <div class="overlay">
-            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i
-                class="fa-solid fa-arrow-right-long"></i></a>
-          </div>
-        </div>
-        <!-- 13 -->
-        <div class="project__filter-box wordpress itemBox">
-          <div class="overlay">
-            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i
-                class="fa-solid fa-arrow-right-long"></i></a>
-          </div>
-        </div>
-        <!-- 14 -->
-        <div class="project__filter-box wordpress itemBox">
-          <div class="overlay">
-            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i
-                class="fa-solid fa-arrow-right-long"></i></a>
-          </div>
-        </div>
-        <!-- 15 -->
-        <div class="project__filter-box bootstrap itemBox">
-          <div class="overlay">
-            <a href="#" target="_blank" aria-label="this link are for particular projects links"><i
-                class="fa-solid fa-arrow-right-long"></i></a>
-          </div>
-        </div>
-
-      </div>
-    </div>
-  </div>
-  <!-- Project End -->
-
-  <!-- FOOTER START -->
-  <footer class="footer section-padding">
-    <div class="footer__container container flex">
-      <!-- Copywrite Text -->
-      <div class="footer__copywrite">
-        <p>© <span id="year"></span>. All rights reserved.</p>
-      </div>
-      <!-- Social Start -->
-      <div class="footer__social flex">
-        <a href="https://github.com/Abdurrobr34l" target="_blank" aria-label="it is github logo"><i
-            class="fa-brands fa-github"></i></a>
-        <span>/</span>
-        <a href="https://www.linkedin.com/in/abdurrobr34l/" target="_blank" aria-label="it is linkedin logo"><i
-            class="fa-brands fa-linkedin"></i></a>
-        <span>/</span>
-        <a href="https://www.facebook.com/abdurrobr34l" target="_blank" aria-label="it is facebook logo"><i
-            class="fa-brands fa-facebook"></i></a>
-      </div>
-    </div>
-  </footer>
-  <!-- FOOTER END -->
-
-  <script src="js/jquery-3.7.1.min.js"></script>
-  <script src="js/script.js"></script>
-  <script src="js/year.js"></script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Abdur Rob | Projects</title><meta name="author" content="Abdur Rob"><meta name="description" content="Welcome to Abdur Rob's portfolio. Explore my web development projects, skills, and learn more about my journey as a frontend developer."><meta name="keywords" content="Abdur Rob, frontend developer, web development, portfolio, JavaScript, CSS, HTML, projects"><meta name="robots" content="index, follow"><meta property="og:title" content="Abdur Rob | Frontend Developer & WordPress Developer"><meta property="og:description" content="Explore my web development projects and skills as a frontend developer."><meta property="og:image" content="url_to_image.jpg"><meta property="og:url" content="https://yourwebsite.com"><meta property="og:type" content="website"><meta name="twitter:card" content="summary_large_image"><meta name="twitter:title" content="Abdur Rob | Frontend Developer & WordPress Developer"><meta name="twitter:description" content="Explore my web development projects and skills as a frontend developer."><meta name="twitter:image" content="url_to_image.jpg"><link rel="stylesheet" href="css/main.css"><link rel="stylesheet" href="css/media.css"><link rel="icon" type="image/x-icon" href="img/favicon/fav.png"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"></head><body><a href="#" class="go-to-top" id="goToTop" aria-label="this link is for go to top button">G<br>O<br><br>T<br>O<br>P</a><header class="header"><div class="header__container container"><div class="header__wrapper flex-wrapper"><div class="header__logo"><a href="index.html"><img src="img/logo/logo.png" alt="it is abdurrobr34l website logo"></a></div><nav class="header__nav"><ul><li><a href="index.html#about" aria-label="it is link for about section">About</a></li><li><a href="index.html#projects" aria-label="it is link for project section">Projects</a></li><li><a href="index.html#services" aria-label="it is link for service section">Services</a></li><li><a href="index.html#contact" aria-label="it is link for contact section">Contact</a></li></ul></nav><div class="header__btn"><a href="index.html#contact" class="btn" aria-label="it is link for contact section">Hire Me</a></div><div class="header__hamburgermenu-icon"><i class="fa-solid fa-bars-staggered"></i><i class="fa-solid fa-xmark"></i></div></div></div></header><div class="hamburgermenu"><div class="hamburgermenu__container container flex"><nav class="hamburgermenu__nav flex"><ul><li><a href="index.html#about" aria-label="it is link for about section">About</a></li><li><a href="index.html#projects" aria-label="it is link for project section">Projects</a></li><li><a href="index.html#services" aria-label="it is link for service section">Services</a></li><li><a href="index.html#contact" aria-label="it is link for contact section">Contact</a></li></ul></nav><div class="hamburgermenu__btn header__btn"><a href="#contact" class="btn" aria-label="it is link for contact section">Hire Me</a></div></div></div><div class="project" id="projects"><div class="project__container container"><div class="project__filter flex"><div class="project__filter-buttons flex"><ul class="flex"><li class="list project__filter-btn active" data-filter="all">ALL</li><li class="list project__filter-btn" data-filter="raw">Raw CSS / SCSS</li><li class="list project__filter-btn" data-filter="tailwind">Tailwind</li><li class="list project__filter-btn" data-filter="bootstrap">Bootstrap</li><li class="list project__filter-btn" data-filter="wordpress">Wordpress</li><li class="list project__filter-btn" data-filter="email">Email Template</li></ul></div></div><div class="project__filter-boxes"><div class="project__filter-box wordpress itemBox"><div class="overlay"><a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a></div></div><div class="project__filter-box wordpress itemBox"><div class="overlay"><a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a></div></div><div class="project__filter-box bootstrap itemBox"><div class="overlay"><a href="https://abdurrobr34l.github.io/Edutech/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a></div></div><div class="project__filter-box raw itemBox"><div class="overlay"><a href="https://abdurrobr34l.github.io/Bookmark/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a></div></div><div class="project__filter-box raw itemBox"><div class="overlay"><a href="https://abdurrobr34l.github.io/Entrepoti/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a></div></div><div class="project__filter-box email itemBox"><div class="overlay"><a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a></div></div><div class="project__filter-box tailwind itemBox"><div class="overlay"><a href="https://abdurrobr34l.github.io/tailwind-login/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a></div></div><div class="project__filter-box bootstrap itemBox"><div class="overlay"><a href="https://abdurrobr34l.github.io/Taxi-Cab/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a></div></div><div class="project__filter-box bootstrap itemBox"><div class="overlay"><a href="https://abdurrobr34l.github.io/project_e-school/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a></div></div><div class="project__filter-box email itemBox"><div class="overlay"><a href="https://abdurrobr34l.github.io/Email-Template/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a></div></div><div class="project__filter-box bootstrap itemBox"><div class="overlay"><a href="https://abdurrobr34l.github.io/Project-psd_to_html/" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a></div></div><div class="project__filter-box wordpress itemBox"><div class="overlay"><a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a></div></div><div class="project__filter-box wordpress itemBox"><div class="overlay"><a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a></div></div><div class="project__filter-box wordpress itemBox"><div class="overlay"><a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a></div></div><div class="project__filter-box bootstrap itemBox"><div class="overlay"><a href="#" target="_blank" aria-label="this link are for particular projects links"><i class="fa-solid fa-arrow-right-long"></i></a></div></div></div></div></div><footer class="footer section-padding"><div class="footer__container container flex"><div class="footer__copywrite"><p>©<span id="year"></span>. All rights reserved.</p></div><div class="footer__social flex"><a href="https://github.com/Abdurrobr34l" target="_blank" aria-label="it is github logo"><i class="fa-brands fa-github"></i></a><span>/</span><a href="https://www.linkedin.com/in/abdurrobr34l/" target="_blank" aria-label="it is linkedin logo"><i class="fa-brands fa-linkedin"></i></a><span>/</span><a href="https://www.facebook.com/abdurrobr34l" target="_blank" aria-label="it is facebook logo"><i class="fa-brands fa-facebook"></i></a></div></div></footer><script src="js/jquery-3.7.1.min.js"></script><script src="js/script.js"></script><script src="js/year.js"></script></body></html>
